--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.1.3"
+    "express-rate-limit": "^5.1.3",
+    "mongoose": "^5.10.9",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
