--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "url": "https://github.com/Dmitry-lab/news-explorer-api/issues"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "celebrate": "^13.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "validator": "^13.1.17"
   },
